[gd_scene load_steps=4 format=3 uid="uid://lm7cmpghfw1r"]

[ext_resource type="Texture2D" uid="uid://b7mp0cwhummjc" path="res://Artwork/GUI_Art/Time_Left_gui.png" id="1_trfni"]
[ext_resource type="Script" path="res://Scripts/GUI_Scripts/time_left_2d_sprite.gd" id="2_n54td"]
[ext_resource type="FontFile" uid="uid://dw6b114a4whvm" path="res://Artwork/GUI_Art/Fonts/Pixel.ttf" id="2_tct7s"]

[node name="Time_Left-2D_Sprite" type="Sprite2D"]
position = Vector2(-17, 159)
texture = ExtResource("1_trfni")
script = ExtResource("2_n54td")

[node name="Time_Left-Number-Label_white" type="Label" parent="."]
offset_left = 305.0
offset_top = -51.0
offset_right = 576.0
offset_bottom = 104.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.196078, 0.0196078, 0.545098, 1)
theme_override_fonts/font = ExtResource("2_tct7s")
theme_override_font_sizes/font_size = 123
text = "0.0"

[node name="Time_Left-Number-Label_purple" type="Label" parent="."]
offset_left = 297.0
offset_top = -58.0
offset_right = 568.0
offset_bottom = 97.0
theme_override_colors/font_color = Color(0.196078, 0.0196078, 0.545098, 1)
theme_override_colors/font_shadow_color = Color(0.196078, 0.0196078, 0.545098, 1)
theme_override_fonts/font = ExtResource("2_tct7s")
theme_override_font_sizes/font_size = 123
text = "0.0"

[node name="Time_left-Round_timer" type="Timer" parent="."]
wait_time = 120.0
one_shot = true
